doc changes to be continued tomorrow
